--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "^2.27.1",
-    "react-native-safe-area-context": "^5.5.1"
+    "react-native-safe-area-context": "^5.5.1",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
