--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/drawer": "^7.5.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
+    "axios": "^1.10.0",
     "expo": "~53.0.17",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "^2.27.1",
     "react-native-safe-area-context": "^5.5.1",
+    "react-native-simple-toast": "^3.3.2",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
