--- a/app.json
+++ b/app.json
@@ -2,6 +2,12 @@
   "expo": {
     "name": "xApp",
     "slug": "xApp",
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "android": {
+      "package": "com.anonymous.xApp"
+    },
+    "ios": {
+      "bundleIdentifier": "com.anonymous.xApp"
+    }
   }
 }
