--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
     "axios": "^1.10.0",
+    "babel-preset-expo": "~13.0.0",
     "expo": "~53.0.17",
     "react": "19.0.0",
     "react-native": "0.79.5",
