--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-gesture-handler": "^2.27.1",
     "react-native-safe-area-context": "^5.5.1",
     "react-native-simple-toast": "^3.3.2",
+    "react-native-system-navigation-bar": "^2.6.4",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
