--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.10.0",
     "babel-preset-expo": "~13.0.0",
     "expo": "~53.0.17",
+    "expo-splash-screen": "~0.30.10",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "^2.27.1",
